syntax = "proto3";


message Ingredient {
  string name = 1;
}

message RecipeIngredient {
    string name = 1;
    int32 quantity = 2;
    string unit = 3;
}

message Recipe {
  string id = 1;
  string title = 2;
  string description = 3;
  string instructions = 4;
  string teaserImage = 5;
  repeated RecipeIngredient ingredients = 6;
}

message RecipeList {
 repeated Recipe recipes = 1;
}

message RecipeQuery {
  string id = 1;
}

message PostRecipeResponse {
  enum Status {
    SUCCESS = 0;
    FAIL = 1;
  }
  Status status = 1;
}

service RecipeStore {
  rpc GetRecipe(RecipeQuery) returns (Recipe);
  rpc QueryRecipes(RecipeQuery) returns (RecipeList);
  rpc PostRecipe(Recipe) returns (PostRecipeResponse);
}